--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-    "dependencies": {
-      "json-server": "^0.17.0"
-    },
-    "name": "server-lm",
-    "version": "1.0.0",
-    "main": "server.js",
-    "devDependencies": {},
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Fábio Cordeiro",
-    "license": "ISC",
-    "description": ""
+  "name": "json-server-vercel",
+  "version": "1.0.0",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "api/server.js",
+  "scripts": {
+    "start": "node api/server.js"
+  },
+  "dependencies": {
+    "json-server": "^0.17.4"
   }
+}
